tests/errors/undefined.con
fn main() {
  println(hello);
#         ^^^^^ undefined
}
